--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!-- HTML Bio with CSS -->
 <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
-
   <meta charset="UTF-8">
-  <title>1.2.9 Exercise</title>
+  <title>CSS Stylesheets with Relative Paths</title>
 
-  <!-- This critical line points your HTML to the CSS file. Notice the "relative" pathway  -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <!-- This line is money! It points your HTML to the CSS file. -->
+  <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 
 <body>
@@ -21,23 +21,20 @@
     <section id="main-bio">
 
       <h2>Your Name</h2>
-      <img src="http://placehold.it/200x200" alt="Your Image" id="bio-image">
-      <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
 
+      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+
+      <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
     </section>
 
     <section id="contact-info">
-
       <h2>Contact Info</h2>
-
       <ul>
         <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
         <li><strong>Github:</strong> <a href="#">sampleName</a></li>
         <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
       </ul>
-
     </section>
-
   </div>
 
 </body>
